--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ input:checked + .OPPT{
 
 }
 .PlanInfo{
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: space-between;
