--- a/style.css
+++ b/style.css
@@ -21,7 +21,7 @@ body{
 .Steps{
     flex: 1;
     background-color: #483EFF;
-    background-image: url(/assets/images/bg-sidebar-desktop.svg);
+    background-image: url(./assets/images/bg-sidebar-desktop.svg);
     background-repeat: no-repeat;
     background-position: bottom;
     background-size: cover;
